# omoikane

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: README.md
agents/builders/: codex-builder.policy.md  codex-builder.yaml  doc-sync-builder.yaml  eval-builder.yaml  schema-builder.yaml
agents/councilors/: change-advocate.policy.md  change-advocate.yaml  conservatism-advocate.policy.md  conservatism-advocate.yaml  design-architect.policy.md  design-architect.yaml  ethics-committee.policy.md  ethics-committee.yaml  memory-archivist.policy.md  memory-archivist.yaml
agents/guardians/: ethics-guardian.policy.md  ethics-guardian.yaml  identity-guardian.policy.md  identity-guardian.yaml  integrity-guardian.policy.md  integrity-guardian.yaml
agents/researchers/: consciousness-theorist.policy.md  consciousness-theorist.yaml  experiment-designer.yaml  legal-scholar.yaml  neuroscience-scout.yaml  quantum-scout.yaml
docs/00-philosophy/: continuity-of-self.md  ethics.md  etymology.md  manifesto.md
docs/01-architecture/: data-flow.md  failure-modes.md  layered-model.md  overview.md
docs/03-protocols/: connectome-format.md  identity-handshake.md  inter-mind-comm.md  memory-replication.md
docs/04-ai-governance/: amendment-protocol.md  codex-as-builder.md  council-protocol.md  (+3 more)
evals/: README.md
meta/: glossary.md  naming-decisions.md  open-questions.md
references/: operating-playbook.md  parallel-codex-orchestration.md  repo-coverage-checklist.md  verification-checklist.md
research/: README.md
specs/: README.md  catalog.yaml
tests/: __init__.py
(+947 files in other folders)
