[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omoikane-os"
version = "0.1.0"
description = "Reference implementation scaffold for OmoikaneOS."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary-Until-Governance" }
authors = [
  { name = "yasufumi" }
]

[project.scripts]
omoikane = "omoikane.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

